--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,28 +1,8 @@
 Flask
 flask-cors
 gunicorn
-pinecone-client
+pinecone
 python-dotenv
 langchain-groq
 sentence-transformers
 requests
-urllib3
-transformers
-torch
-scikit-learn
-numpy
-scipy
-pydantic
-huggingface-hub
-tqdm
-filelock
-fsspec
-packaging
-pillow
-tenacity
-jsonpatch
-orjson
-httpx
-httpcore
-sniffio
-anyio
